--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port= 8089
-spring.datasource.url=jdbc:mysql://localhost:3306/swp391
+server.port= 9090
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=devhoa
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
@@ -12,12 +12,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.web.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/templates/
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.web.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/templates/
