--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8089
-spring.datasource.url=jdbc:mysql://localhost:3306/swp391
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/kivicare
 spring.datasource.username=root
-spring.datasource.password=devhoa
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
